--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,14 +13,14 @@
         <button id="btn1">新增</button>
         <tr>
             <td>编号</td>
-            <td>姓名</td>
-            <td>年龄</td>
+            <td>用户</td>
+            <td>密码</td>
             <td>操作</td>
         </tr>
         <tr th:each="user:${users}">
             <td th:text="${user.id}"></td>
             <td th:text="${user.username}"></td>
-            <td th:text="${user.age}"></td>
+            <td th:text="${user.password}"></td>
             <td><button th:onclick="'upd('+${user.id}+')'">修改</button><button th:onclick="'del('+${user.id}+')'">删除</button></td>
         </tr>
     </table>
@@ -30,7 +30,7 @@
 <div id="tab2" style="display: none">
     <table>
         username:<input id="username" type="text"><br>
-        age:<input id="age" type="text"><br>
+        age:<input id="password" type="text"><br>
         <button id="btn2">提交</button>
     </table>
 </div>
@@ -40,7 +40,7 @@
     <table>
         id:<input id="id1" type="text" readonly><br>
         username:<input id="username1" type="text"><br>
-        age:<input id="age1" type="text"><br>
+        age:<input id="password1" type="text"><br>
         <button id="btn3">提交</button>
     </table>
 </div>
@@ -53,7 +53,7 @@
             },function (data) {
                 id1.value = data.id;
                 username1.value = data.username;
-                age1.value = data.age;
+                password1.value = data.password;
                 tab1.style.display = 'none';
                 tab3.style.display = 'block';
             })
@@ -77,7 +77,7 @@
             $('#btn2').click(function () {
                 $.post('/user/save',{
                     username:username.value,
-                    age:age.value
+                    password:age.password
                 },function () {
                     alert("保存成功！");
                     location="/user/findAll";
@@ -87,7 +87,7 @@
                 $.post('/user/update',{
                     id:id1.value,
                     username:username1.value,
-                    age:age1.value
+                    password:password1.value
                 },function () {
                     alert("修改成功！");
                     location="/user/findAll";
