--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
     <table>
         id:<input id="id1" type="text" readonly><br>
         username:<input id="username1" type="text"><br>
-        age:<input id="password1" type="text"><br>
+        password:<input id="password1" type="text"><br>
         <button id="btn3">提交</button>
     </table>
 </div>
